[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/window/menu_bar.gd" type="Script" id=3]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/project/project_crud/project_crud_popup.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/window/project_file_dialog.gd" type="Script" id=5]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/utilities/about_popup.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/utilities/preferences_dialog.tscn" type="PackedScene" id=8]

[node name="MenuBar" type="PanelContainer"]
margin_right = 1366.0
margin_bottom = 25.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1359.0
margin_bottom = 378.0
custom_constants/margin_top = 10
custom_constants/margin_left = 15
custom_constants/margin_bottom = 10

[node name="HLayout" type="HBoxContainer" parent="Padding"]
margin_left = 15.0
margin_top = 10.0
margin_right = 1352.0
margin_bottom = 361.0
custom_constants/separation = 20

[node name="Tilth" type="MenuButton" parent="Padding/HLayout"]
margin_right = 40.0
margin_bottom = 351.0
focus_mode = 2
size_flags_horizontal = 0
text = "Tilth"
items = [ "About", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="Project" type="MenuButton" parent="Padding/HLayout"]
margin_left = 60.0
margin_right = 117.0
margin_bottom = 351.0
focus_mode = 2
size_flags_horizontal = 0
text = "Project"
items = [ "Edit project", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="Help" type="MenuButton" parent="Padding/HLayout"]
margin_left = 137.0
margin_right = 179.0
margin_bottom = 351.0
focus_mode = 2
size_flags_horizontal = 0
text = "Help"
items = [ "Docs", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="ProjectCrudPopup" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1359.0
margin_bottom = 378.0

[node name="AboutPopup" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1359.0
margin_bottom = 378.0

[node name="ProjectFileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 7.0
margin_top = 7.0
margin_right = 423.0
margin_bottom = 378.0
rect_min_size = Vector2( 400, 140 )
size_flags_horizontal = 0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.tres ; Resource files" )
current_dir = "/Users/sam/Desktop/02"
current_path = "/Users/sam/Desktop/02/"
script = ExtResource( 5 )

[node name="PreferencesDialog" parent="." instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1359.0
margin_bottom = 378.0
